cmake_minimum_required(VERSION 2.8)
if("${CMAKE_CXX_COMPILER_ID}" MATCHES "(GNU|Clang)")
    set(CMAKE_CXX_FLAGS "-std=c++14")
endif()
find_package(Boost 1.55.0 REQUIRED)
find_package(Threads)
find_library(STUDXML_LIBRARY studxml)
add_executable(dewiki-words dewiki-words.cxx)
target_link_libraries(dewiki-words ${CMAKE_THREAD_LIBS_INIT} ${STUDXML_LIBRARY})

